--- a/Makefile.in.linux
+++ b/Makefile.in.linux
@@ -1,5 +1,6 @@
 # -- Compile settings for the cluster
 CPP       = CC
-CPPFLAGS  = -std=c++11 -Wall -g -fopenmp
+#CPPFLAGS  = -std=c++11 -Wall -g -fopenmp
+CPPFLAGS  = -std=c++11 -Wall
 OPTFLAGS = -O3
 LIBS     = -lm
